# barbar

./: .gitignore  CLAUDE.md  README.md  TASKS.md  THIRD-PARTY-NOTICES.md  cep.config.ts  package.json  pnpm-lock.yaml  reload-ae.ps1  test.aep  vite.config.ts
AEGP/: AegpDemo.cpp  AegpDemo.h  AegpDemoUI.cpp  AegpDemoUI.h  AegpDemo_PiPL.r  AegpDemo_Strings.cpp  EscGuard.cpp  FontPath.cpp  HotkeyOverlay.h  HotkeyOverlay_Popup.cpp  HotkeyOverlay_Win32.cpp  PopupActions.cpp  PopupActions.h  PopupWindowStyle.cpp  ScriptRunner.cpp  ScriptRunner.h  WsClient.cpp  WsClient.h  build.ps1  win32_popup_bridge.h
AEGP/HotkeyOverlay/: CMakeLists.txt
AEGP/Mac/: AegpDemo.plugin-Info.plist  AegpDemoUI_Plat.cpp  AegpDemoUI_Plat.h
AEGP/Mac/AegpDemo.xcodeproj/: project.pbxproj
AEGP/PopupExe/: CMakeLists.txt  StubActions.cpp  StubWs.cpp  popup_main.cpp  run.ps1
AEGP/Resources/Fonts/: LICENCE_UFL.txt
AEGP/Win/: AegpDemo.sln  AegpDemo.vcxproj  AegpDemoUI_Plat.cpp  AegpDemoUI_Plat.h  AegpDemo_PiPL.rc
Adobe After Effects Auto-Save/: test auto-save 1.aep  test auto-save 2.aep
Graphics/: icons 01.ai
invalidParam/motion-fun-data/: ui-log-cache.json
src/js/: app.svelte  index.scss
src/js/floating/: floating.svelte
src/js/lib/: ae-keymap.ts  prefs.ts  ws-server.ts
src/js/lib/utils/: bolt.ts
src/js/main/: index-svelte.ts  index.html  main.svelte
src/jsx/: index.ts
src/jsx/aeft/: aeft.ts
src/shared/: easingScript.ts
